class4: add class 4 files + projeto

--- a/aula_3/ci-python.yaml
+++ b/aula_3/ci-python.yaml
@@ -26,13 +26,13 @@ steps:
 
   - bash: |
       pip install pytest
-      pytest
+      pytest --junitxml=test-output.xml
     displayName: Run unit tests
 
   - task: PublishTestResults@2
     inputs:
       testResultsFormat: "JUnit"
-      testResultsFiles: "**/TEST-*.xml"
+      testResultsFiles: "**/test-*.xml"
       searchFolder: $(System.DefaultWorkingDirectory)
     condition: succeededOrFailed()
     displayName: Upload test results
