--- a/.github/workflows/create-repository.yaml
+++ b/.github/workflows/create-repository.yaml
@@ -23,5 +23,9 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: "OpenTofu - Setup Tofu"
-        uses: opentofu/setup-opentofu@v1.0.3
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v2
+
+      - name: "Terraform Init"
+        run: terraform init
+        working-directory: ./aula_5/terraform
