--- a/aula_7/Jenkinsfile
+++ b/aula_7/Jenkinsfile
@@ -11,7 +11,7 @@ pipeline {
         stage('Test') {
             steps {
                 echo 'Testing..'
-                echo 'Running pytest..'
+                echo 'Running pytest...'
             }
         }
         stage('Build') {
